plugins {
    id 'groovy'
    id 'jacoco'
    id 'project-report'
    id 'signing'
    id 'ru.vyarus.java-lib' version '3.0.0'
    id 'ru.vyarus.github-info' version '2.0.0'
    id 'ru.vyarus.quality' version '6.0.1'
    id 'com.github.spotbugs' version '5.2.5' apply false
    id 'net.researchgate.release' version '3.1.0'
    id 'io.github.gradle-nexus.publish-plugin' version '2.0.0'
    id 'com.github.ben-manes.versions' version '0.53.0'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
}

wrapper {
    gradleVersion = '8.14.4'
}

repositories { mavenLocal(); mavenCentral() }
dependencies {
    implementation platform('org.junit:junit-bom:6.0.2')

    // direct dependency to prevent usage with older junit api
    implementation 'org.junit.jupiter:junit-jupiter-api'

    // to not force exact version in user classpath
    provided 'org.spockframework:spock-core:2.4-groovy-5.0'

    testImplementation 'org.junit.platform:junit-platform-testkit'
    testImplementation 'io.github.joke:spock-outputcapture:4.0.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter'
}

group = 'ru.vyarus'
description = 'Junit 6 extensions support for Spock Framework 2'

github {
    user = 'xvik'
    license = 'MIT'
    repository = 'spock-junit5'
}

maven {
    pom {
        developers {
            developer {
                id = 'xvik'
                name = 'Vyacheslav Rusakov'
                email = 'vyarus@gmail.com'
            }
        }
    }
    // use only direct dependencies in the generated pom, removing BOM mentions
    removeDependencyManagement()
}

javaLib {
    // java 9 auto module name
    autoModuleName = 'ru.vyarus.spock.junit6'
    // don't publish gradle metadata artifact
    withoutGradleMetadata()
}



nexusPublishing {
    repositories {
        sonatype {
            nexusUrl = uri("https://ossrh-staging-api.central.sonatype.com/service/local/")
            snapshotRepositoryUrl = uri("https://central.sonatype.com/repository/maven-snapshots/")
            username = findProperty('sonatypeUser')
            password = findProperty('sonatypePassword')
        }
    }
}

// skip signing for jitpack (snapshots)
tasks.withType(Sign) { onlyIf { !System.getenv('JITPACK') && !version.endsWith('-SNAPSHOT') } }

// Required signing properties for release: signing.keyId, signing.password and signing.secretKeyRingFile
// (https://docs.gradle.org/current/userguide/signing_plugin.html#sec:signatory_credentials)

release.git.requireBranch.set('master')

afterReleaseBuild {
    dependsOn = ['publishToSonatype',
                 'closeAndReleaseSonatypeStagingRepository']
    doLast {
        logger.warn "RELEASED $project.group:$project.name:$project.version"
    }
}

test {
    useJUnitPlatform()
    testLogging {
        events 'skipped', 'failed'
        exceptionFormat = 'full'
    }
    maxHeapSize = '512m'
}

dependencyUpdates.revision = 'release'
